# pwgen

./: Makefile.am  README.md  aclocal.m4  config.h.in  configure.ac  pwgen  pwgen.cc  pwgen.conf
m4/: ax_boost_python.m4  ax_python.m4
pwgen/: Makefile.am  __init__.py  pwgen.cc  pyperclip.py
src/: Makefile.am  pwgen  pwgen.conf
